--- a/ormconfig.example.json
+++ b/ormconfig.example.json
@@ -10,6 +10,6 @@
   "entities": ["dist/**/*.entity{.ts,.js}"],
   "migrations": ["dist/migrations/*{.ts,.js}"],
   "cli": {
-    "migrationsDir": "src/migrations"
+    "migrationsDir": "./migrations"
   }
 }
