--- a/ormconfig.example.json
+++ b/ormconfig.example.json
@@ -1,14 +1,18 @@
 {
   "type": "mysql",
-  "host": "103.97.126.24",
+  "host": "db.phamduy.me",
   "port": 3306,
   "username": "gjmhqdqv_testdb",
   "password": "1234qwer",
   "database": "gjmhqdqv_testdb",
   "synchronize": false,
   "logging": false,
-  "entities": ["dist/**/*.entity{.ts,.js}"],
-  "migrations": ["dist/migrations/*{.ts,.js}"],
+  "entities": [
+    "dist/**/*.entity{.ts,.js}"
+  ],
+  "migrations": [
+    "dist/migrations/*{.ts,.js}"
+  ],
   "cli": {
     "migrationsDir": "./migrations"
   }
